--- a/styles/style.css
+++ b/styles/style.css
@@ -13,19 +13,235 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
   /* выше установили ограничения для секции */
 }
+.logo{
+  width: 228px;
+  height: 32px;
+}
+.logo_place_header{
+  position: absolute;
+  left: 64px;
+  top: 30px;
+}
+.header__title{
+  align-items: center;
+  position: relative;
+  left: 64px;
+  align-content: center;
+  max-width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+}
+.header__subtitle{
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  max-width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+}
+.header__link{
+  color: #2f80ed;
+}
+.header__main-illustration{
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  right: 0px;
+  bottom: 0px;
+  z-index: 1;
+  margin: 0;
+  padding: 0;
 
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  right: 0px;
+  top:64px;
+}
+.description{
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+
+}
+.two-columns{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.two-columns__brief{
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 0;
+  margin: 0;
+  color: #2f80ed;
+}
+.two-columns__main-text{
+  width: 80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+
+}
+.two-columns__paragraph{
+  margin: 0 0 20px 0;
+  padding: 0;
+}
+.two-columns__paragraph:last-of-type{
+  margin-bottom: 0%;
+}
+.digits{
+  padding: 100px 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+.section-title{
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700;
+  padding: 0;
+text-align: center;
+margin: 0 0 20px 0;
+
+}
+.section-subtitle{
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0%;
+  padding: 0;
+}
+.table{
+  width: 1100px;
+  margin:  0px auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0%;
+}
+.table__cell{
+  width: 250px;
+  margin-top: 60px;
+}
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+  padding: 0;
+  margin: 0 ;
+}
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0 0;
+  padding: 0;
+}
+.feynman{
+  background-color: #f2f2f2;
+  height: 890px;
+  display: flex;
+  padding: 100px 0 0 0;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 867px 637px;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+.feynman__title{
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 700;
+  margin: 0 0 70px 0;
+  text-align: center;
+}
+.feynman__subtitle{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 0;
+}
+.feynman__link{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+.kaufman{
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 90px 0 ;
+  position: relative;
+  overflow: hidden;
+}
+.section-title_theme_dark{
+  color: white;
+}
+.section-subtitle_theme_dark{
+  color: white;
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+.kaufman__triangle{
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  position: absolute;
+  right: -210px;
+  top: 0;
+  background-size: 877px 877px;
+  width: 877px;
+  height: 877px;
+  overflow: hidden;
+}
+
+.footer{
+  background-color: #000000;
 }
