--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@
 }
 .header__link{
   color: #2f80ed;
+  text-decoration: none;
 }
 .header__main-illustration{
   position: absolute;
@@ -105,6 +106,11 @@
   font-size: 24px;
   font-weight: normal;
 
+}
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
 }
 .two-columns__paragraph{
   margin: 0 0 20px 0;
@@ -203,10 +209,11 @@ margin: 0 0 20px 0;
   position: absolute;
   top: 50%;
   right: 48px;
+  text-decoration: none;
 }
 
 .kaufman{
-  background-color: #000000;
+  background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -243,5 +250,64 @@ margin: 0 0 20px 0;
 }
 
 .footer{
-  background-color: #000000;
+  background-color: #1f1f1f;
+  min-height: 350px;
+  padding: 60px 0 40px 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+}
+.footer__columns{
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+.footer__column_coopyright{
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer__author{
+  color: white;
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__column_content_info{
+  display: flex;
+  flex-direction: column;
+}
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+.footer__column-heading{
+  color: white;
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.column__links{
+  list-style: none;
+  margin: 20px 0 16px 0;
+  padding: 0;
+  text-align: left;
+}
+.column__link{
+  color: white;
+  line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+    text-decoration: none;
+}
+
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
 }
