--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,7 @@
   font-weight: 700;
   margin: 0;
   padding: 0;
+  z-index: 2;
 }
 .header__subtitle{
   position: absolute;
@@ -53,6 +54,7 @@
   font-weight: normal;
   margin: 0;
   padding: 0;
+  z-index: 2;
 }
 .header__link{
   color: #2f80ed;
