--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
@@ -18,20 +18,18 @@
   flex-direction: column;
   position: relative;
   justify-content: center;
-  margin: 0px;
-  padding: 0px;
   /* выше установили ограничения для секции */
 }
-.logo{
+.logo {
   width: 228px;
   height: 32px;
 }
-.logo_place_header{
+.logo_place_header {
   position: absolute;
   left: 64px;
   top: 30px;
 }
-.header__title{
+.header__title {
   align-items: center;
   position: relative;
   left: 64px;
@@ -41,10 +39,9 @@
   font-size: 102px;
   font-weight: 700;
   margin: 0;
-  padding: 0;
   z-index: 2;
 }
-.header__subtitle{
+.header__subtitle {
   position: absolute;
   left: 64px;
   bottom: 30px;
@@ -53,23 +50,22 @@
   font-size: 18px;
   font-weight: normal;
   margin: 0;
-  padding: 0;
   z-index: 2;
 }
-.header__link{
+.header__link {
   color: #2f80ed;
   text-decoration: none;
 }
-.header__main-illustration{
+.header__main-illustration {
   position: absolute;
   width: 765px;
   height: 608px;
-  right: 0px;
-  bottom: 0px;
+  right: 0;
+  bottom: 0;
   z-index: 1;
   margin: 0;
   padding: 0;
-
+  object-fit: contain;
 }
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
@@ -77,22 +73,21 @@
   width: 568px;
   background-color: #2f80ed;
   position: absolute;
-  right: 0px;
-  top:64px;
+  right: 0;
+  top: 64px;
 }
-.description{
+.description {
   padding-top: 100px;
   display: flex;
   justify-content: center;
-
 }
-.two-columns{
+.two-columns {
   width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.two-columns__brief{
+.two-columns__brief {
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -101,84 +96,76 @@
   margin: 0;
   color: #2f80ed;
 }
-.two-columns__main-text{
+.two-columns__main-text {
   width: 80%;
   min-width: 784px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-
 }
-.two-columns__span-accent{
+.two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
 }
-.two-columns__paragraph{
+.two-columns__paragraph {
   margin: 0 0 20px 0;
-  padding: 0;
 }
-.two-columns__paragraph:last-of-type{
-  margin-bottom: 0%;
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
 }
-.digits{
+.digits {
   padding: 100px 0;
-  margin: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
-.section-title{
+.section-title {
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 700;
-  padding: 0;
-text-align: center;
-margin: 0 0 20px 0;
-
+  text-align: center;
+  margin: 0 0 20px 0;
 }
-.section-subtitle{
+.section-subtitle {
   width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-  margin: 0%;
+  margin: 0;
   padding: 0;
 }
-.table{
+.table {
   width: 1100px;
-  margin:  0px auto;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   list-style: none;
-  padding: 0%;
+  padding: 0;
 }
-.table__cell{
+.table__cell {
   width: 250px;
   margin-top: 60px;
 }
-.table__heading{
+.table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: 700;
-  padding: 0;
   margin: 0;
 }
-.table__text{
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   margin: 20px 0 0 0;
-  padding: 0;
 }
-.feynman{
+.feynman {
   background-color: #f2f2f2;
-  height: 890px;
+  min-height: 890px;
   display: flex;
   padding: 100px 0 0 0;
   background-image: url(../images/feynman.png);
@@ -188,8 +175,9 @@ margin: 0 0 20px 0;
   align-items: center;
   flex-direction: column;
   position: relative;
+  box-sizing: border-box;
 }
-.feynman__title{
+.feynman__title {
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
@@ -197,13 +185,13 @@ margin: 0 0 20px 0;
   margin: 0 0 70px 0;
   text-align: center;
 }
-.feynman__subtitle{
+.feynman__subtitle {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   margin: 0;
 }
-.feynman__link{
+.feynman__link {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -214,7 +202,7 @@ margin: 0 0 20px 0;
   text-decoration: none;
 }
 
-.kaufman{
+.kaufman {
   background-color: #1f1f1f;
   display: flex;
   flex-direction: column;
@@ -225,21 +213,21 @@ margin: 0 0 20px 0;
   position: relative;
   overflow: hidden;
 }
-.section-title_theme_dark{
+.section-title_theme_dark {
   color: white;
+  z-index: 1;
 }
-.section-subtitle_theme_dark{
+.section-subtitle_theme_dark {
   color: white;
 }
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
   margin-top: 80px;
   z-index: 1;
 }
-.kaufman__triangle{
+.kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
   background-repeat: no-repeat;
   position: absolute;
@@ -248,10 +236,10 @@ margin: 0 0 20px 0;
   background-size: 877px 877px;
   width: 877px;
   height: 877px;
-  overflow: hidden;
+  object-fit: contain;
 }
 
-.footer{
+.footer {
   background-color: #1f1f1f;
   min-height: 350px;
   padding: 60px 0 40px 0;
@@ -259,56 +247,50 @@ margin: 0 0 20px 0;
   display: flex;
   justify-content: center;
 }
-.footer__columns{
+.footer__columns {
   display: flex;
   flex-direction: row;
   width: 90%;
   margin: 0 auto;
   justify-content: space-between;
 }
-.footer__column_coopyright{
-  flex-basis: 711px;
+.footer__column {
   display: flex;
   flex-direction: column;
+}
+.footer__column_coopyright {
+  flex-basis: 711px;
   justify-content: space-between;
 }
-.footer__author{
+.footer__author {
   color: white;
   margin: 18px 0;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
 }
-.footer__column_content_info{
-  display: flex;
-  flex-direction: column;
-}
-.footer__column_content_social {
-  display: flex;
-  flex-direction: column;
-}
-.footer__column-heading{
+.footer__column-heading {
   color: white;
   margin: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
 }
-.column__links{
+.footer__column__links {
   list-style: none;
   margin: 20px 0 16px 0;
   padding: 0;
   text-align: left;
 }
-.column__link{
+.footer__column__link {
   color: white;
   line-height: 30px;
-    font-size: 18px;
-    font-weight: normal;
-    text-decoration: none;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
 }
 
-.footer__social-icon{
+.footer__social-icon {
   width: 16px;
   height: 16px;
   margin: 0 10px 0 0;
