--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,8 +1,8 @@
-.resourses__logo{
+.resources__logo{
   width: 270px;
   height: 38px;
 }
 
-.resourses__logo:hover{
+.resources__logo:hover{
   opacity: 0.6;
 }
